-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15, 6.0
-
None
-
-
8e1f9169c (dev), 078c68462 (6.7), d01654ffb (6.6), 3aad91058 (tqtc/lts-6.5)
The docs for QProcess::start() says:
The QProcess object will immediately enter the Starting state.
This is not entirely precise, as on Windows the process transitions directly either to the Running state, or it stays in the NotRunning state (e.g. when wrong path to exec was passed).
See the comments inside: https://codereview.qt-project.org/c/qt/qtbase/+/530467 for more info.
- resulted from
-
QTCREATORBUG-30066 Git commands fail on windows when using the QProcess backend
-
- Closed
-
| For Gerrit Dashboard: QTBUG-120968 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 530467,8 | QProcess/Doc: clarify that started() may be emitted very early | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 532861,2 | QProcess/Doc: clarify that started() may be emitted very early | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 532990,2 | QProcess/Doc: clarify that started() may be emitted very early | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 533253,2 | QProcess/Doc: clarify that started() may be emitted very early | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |